--- a/main.css
+++ b/main.css
@@ -81,8 +81,7 @@ h1 {
 }
 
 .coloana-main img {
-  max-width: 400px;
-  max-height: 300px;
+  max-width: 500px;
   object-fit: cover;
   overflow: hidden;
 }
@@ -208,19 +207,24 @@ textarea {
     display: block;
     width: 100%;
   }
+}
 
-  @media screen and (max-width: 600px) {
-    #rezervare input {
-      border-radius: 5px;
-      background-color: white;
-      padding: 5px;
-      margin: 5px;
-    }
-    .rezervare {
-      max-width: 300px;
-    }
+@media screen and (max-width: 600px) {
+  #rezervare input {
+    border-radius: 5px;
+    background-color: white;
+    padding: 5px;
+    margin: 5px;
+  }
+  .rezervare {
+    max-width: 300px;
+  }
+
+  .coloana-main img {
+    max-width: 300px;
   }
 }
+
 
 @keyframes blink {
   0% {
